# whisk

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.markdown  README.md  fix_permissions.py  pyproject.toml  setup.py  update_permissions.py  whisk_trace_measure_combine_docker.sh
include/: common.h  compat.h  ffmpeg_adapt.h  param.h  utilities.h
include/parameters/: param.h
scripts/: test_CDLL.py
src/: classify.c  compat.c  eval.c  ffmpeg_adapt.c  image_lib.p  measurements_io_v3.c  report.c  seed.c  tiff_io.c  trace.c  utilities.c  video.c  whisker_io_whiskold.c
src/parameters/: CMakeLists.txt  schema.y
src/whisk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_include/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  ffmpeg_image_alloc_test.c  ffmpeg_test.c  ffmpeg_test_detailed.c  ffmpeg_video_init_test.c  ffmpeg_video_init_test_simple.c  ffmpeg_video_next_test.c  pixel_format_test.c  simple_test.c
whisk/: __init__.py  whisk_utils.py
whisk.egg-info/: PKG-INFO  SOURCES.txt
whisk_janelia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
